--- a/build.properties
+++ b/build.properties
@@ -36,7 +36,7 @@
     app.server.glassfish.portal.dir=${app.server.glassfish.dir}/domains/domain1/applications/liferay-portal
 
     #
-    # Specify the paths to an unzipped JBoss EAP bundle.
+    # Specify the paths to an unzipped JBoss bundle.
     #
     app.server.jboss.dir=${app.server.parent.dir}/jboss-eap-6.4
     app.server.jboss.deploy.dir=${app.server.jboss.dir}/standalone/deployments
@@ -102,7 +102,7 @@
     app.server.websphere.portal.dir=${app.server.websphere.dir}/profiles/liferay/installedApps/liferay-cell/liferay-portal.ear/liferay-portal.war
 
     #
-    # Specify the paths to an unzipped Wildfly bundle.
+    # Specify the paths to an unzipped WildFly bundle.
     #
     app.server.wildfly.dir=${app.server.parent.dir}/wildfly-10.0.0
     app.server.wildfly.deploy.dir=${app.server.wildfly.dir}/standalone/deployments
